<resources>

    <string name="app_name">三国演义</string>
    <string name="tab_cate_text">书目</string>
    <string name="tab_bookmark_text">书签</string>
    <string name="tab_history_text">历史</string>
    <string name="tab_setting_text">设置</string>
    <string name="tab_more_text">关于</string>
    <string name="more_version_text">版本号:</string>
    <string name="more_copyright_text">作者:李仙靖</string>
    <string name="more_review_btn">评论此软件</string>
    <string name="more_share_btn">分享此软件</string>
    <string name="more_copyright_btn">关于版权</string>
    <string name="more_more_btn">更多精彩应用</string>
    <string name="more_contact_msg_text">如果您在使用过程中遇到什么问题或者建议，请随时联系我们，谢谢合作。</string>
    <string name="more_contact_us_btn">联系我们</string>
    <string name="more_copyright_message">本APK所有内容均来自网络，仅出于传递信息的目的，不代表本APK作者声音。如对文章内容有任何异议，或者想法请发送邮件与我们联系。</string>
    <string name="more_thanks_text">特别鸣谢\n感谢这个时代。</string>
    <string name="share_content">Hello，我正在阅读微小说，建议你也应该看看哦。你可以在电子市场上搜索“微小说”找到该应用。</string>
    <string name="share_subject">分享微小说</string>
    <string name="contact_email_title">关于《微小说》的问题与建议</string>
    <string name="select_application">Select an Application</string>
    <string name="progress">进程</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_error">Error</string>
    <string name="str_confirm">Confirm</string>
    <string name="exit">退出</string>
    <!--  -->
    <string name="launcher_first_load">应用第一次启动\n需要较长时间等待\n请稍候&#8230;</string>
    <string name="launcher_load">正在努力的加载中\n请稍候&#8230;</string>

    <!--  -->
    <string name="menu_pop_auto_scroll">开始滚动</string>
    <string name="menu_pop_catalog">章节书目</string>
    <string name="menu_pop_add_mark">添加书签</string>
    <string name="menu_pop_mark">书签管理</string>
    <string name="menu_pop_position">进度跳转</string>
    <string name="menu_pop_rotate">旋转屏幕</string>
    <string name="menu_pop_pre">前一章节</string>
    <string name="menu_pop_next">后一章节</string>
    <string name="menu_pop_light">亮度调节</string>
    <string name="menu_pop_font">字体设置</string>
    <string name="menu_mode_scroll">滑动模式</string>
    <string name="menu_mode_drag">翻页模式</string>
    <string name="menu_pop_background">主题风格</string>
    <string name="menu_pop_default">默认设置</string>
    <string name="menu_pop_user">用户反馈</string>
    <string name="menu_pop_scroll">更新说明</string>
    <!--  -->
    <string name="menu_addmark_sucess">添加书签成功</string>
    <string name="menu_addmark_fail">添加书签失败</string>
    <!--  -->
    <string name="settings_position">当前阅读位置</string>
    <string name="settings_screen">屏幕</string>
    <string name="settings_screen_light">允许屏幕关闭</string>
    <string name="settings_screen_light_desc">长时间无操作，关闭屏幕显示</string>
    <string name="settings_screen_statusbar">显示系统状态栏</string>
    <string name="settings_screen_statusbar_desc">下次进入生效</string>

    <!--  -->
    <string name="settings_font">文字</string>
    <string name="settings_font_b">粗体</string>
    <string name="settings_font_b_desc">设置后小说文字为粗体</string>
    <string name="settings_font_t">斜体</string>
    <string name="settings_font_t_desc">设置后小说文字为斜体</string>
    <!--  -->
    <string name="settings_screen_orientation">屏幕方向</string>
    <string name="settings_screen_orientation_landscape">横屏</string>
    <string name="settings_screen_orientation_portrait">竖屏</string>
    <string name="settings_screen_orientation_sensor">重力感应</string>

    <!--  -->
    <string name="settings_font_size">字体</string>
    <string name="settings_font_color">字色</string>
    <!--  -->
    <string name="settings_theme">主题</string>
    <string name="settings_theme_bg_style">背景风格</string>
    <string name="settings_theme_background">背景</string>
    <string name="settings_theme_bg_color">颜色</string>
    <string name="settings_theme_bg_picture">图片</string>
    <string name="settings_theme_bg_picture_error">对不起，设置壁纸失败。:(</string>
    <string name="settings_theme_bg_picture_save_error">对不起，保存壁纸失败。:(</string>
    <!--  -->
    <string name="settings_nothing">对不起，该功能还没有实现。:)</string>
    <string name="settings_first_page">第一页</string>
    <string name="settings_last_page">最后一页</string>
    <string name="settings_first_chapter">第一章</string>
    <string name="settings_last_chapter">最后一章</string>
    <string name="settings_not_found_book">找不到当前目录</string>
    <string name="settings_londing">正在加载中</string>
      <string name="settings_restore_default_settings">还原默认设置成功</string>
    <!--  -->
    <string name="no_mark">您还没有添加书签</string>
    <string name="no_histery">您还没有任何阅读记录</string>
    <!--  -->
    <string name="sys_confirm">确定</string>
    <string name="sys_giveup">放弃</string>
    <string name="sys_cancel">取消</string>
    
     <string name="settings_last_page_alter">已经是最后一页了，看看远方休息休息眼睛吧。</string>

</resources>