<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dlg_seek_bg"
    android:minWidth="300dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/seek_dlg_head_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dlg_seek_title"
        android:gravity="center"
        android:padding="5dp" >

        <TextView
            android:id="@+id/seek_dlg_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/settings_font"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64.0dip"
        android:gravity="center_vertical"
        android:background="#FFCCBBDD"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <ImageView
            android:id="@+id/adjust_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/book_list_selector"
            android:padding="5.0dip"
            android:src="@drawable/icon_adjust_font" />

        <SeekBar
            android:id="@+id/brightness"
            style="@style/Widget.SeekBar.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16.0dip" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2.0px"
        android:scaleType="fitXY"
        android:src="@drawable/bs_list_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <ImageView
            android:id="@+id/adjust_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/book_list_selector"
            android:padding="5.0dip"
            android:src="@drawable/icon_line_spacing" />

        <SeekBar
            android:id="@+id/brightness"
            style="@style/Widget.SeekBar.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16.0dip" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2.0px"
        android:scaleType="fitXY"
        android:src="@drawable/bs_list_divider" />

    <LinearLayout
        android:id="@+id/screen_mode"
        android:layout_width="fill_parent"
        android:layout_height="64.0dip"
        android:background="@drawable/book_list_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="40.0dip"
            android:paddingTop="10.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingBottom="7.0dip"
                android:singleLine="true"
                android:text="@string/settings_font_color"
                android:textColor="#ff272727"
                android:textSize="16.0sp" />

            <TextView
                android:id="@+id/screen_mode_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:shadowColor="@android:color/white"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:singleLine="true"
                android:text="ttt"
                android:textColor="#ff858585"
                android:textSize="11.0sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="7.0dip"
            android:src="@drawable/dlg_arrow" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2.0px"
        android:scaleType="fitXY"
        android:src="@drawable/bs_list_divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="64.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="40.0dip"
            android:paddingTop="10.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingBottom="7.0dip"
                android:singleLine="true"
                android:text="@string/settings_font_b"
                android:textColor="#ff272727"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:shadowColor="@android:color/white"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:singleLine="true"
                android:text="@string/settings_font_b_desc"
                android:textColor="#ff858585"
                android:textSize="11.0sp" />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/keep_screen_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="7.0dip"
            android:background="@drawable/checkbox_selector"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="2.0px"
        android:scaleType="fitXY"
        android:src="@drawable/bs_list_divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="64.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:paddingBottom="10.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="40.0dip"
            android:paddingTop="10.0dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:paddingBottom="7.0dip"
                android:singleLine="true"
                android:text="@string/settings_font_t"
                android:textColor="#ff272727"
                android:textSize="16.0sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:shadowColor="@android:color/white"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:singleLine="true"
                android:text="@string/settings_font_t_desc"
                android:textColor="#ff858585"
                android:textSize="11.0sp" />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/show_sys_caption_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="7.0dip"
            android:background="@drawable/checkbox_selector"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

</LinearLayout>